--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -1,33 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.ev.jonathan.emprendeelvieajeev.AcercaDe">
 
-    <android.support.design.widget.AppBarLayout
+    <TextView
+        android:id="@+id/tv_acercade_titulo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="76dp"
+        android:gravity="center"
+        android:text="Accerca de Emprende el Viaje EV"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="16dp" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.ev.jonathan.ev_emprendeelviaje.LugarTuristico">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="com.ev.jonathan.ev_emprendeelviaje.LugarTuristico">
 
-    </android.support.design.widget.AppBarLayout>
+            <TextView
+                android:id="@+id/tv_acercade"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:gravity="center"
+                android:text="Emprende el viaje 0.3"
+                android:textStyle="italic"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
 
-    <include layout="@layout/content_acerca_de" />
+            <TextView
+                android:id="@+id/tv_acercade_info"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:gravity="center"
+                android:text="Aplicacion movil que ayuda a encontrar \ntodos los lujares turisticos de tu alrededor"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+            <TextView
+                android:id="@+id/tv_acercade_copyright"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Escuela Politécnica Nacional\nCopyright 2018 "
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+            <TextView
+                android:id="@+id/tv_acercade_creadopor"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:gravity="center"
+                android:text="Creado por:"
+                android:textStyle="bold"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <TextView
+                android:id="@+id/tv_acercade_creador1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Jonathan Caiza"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <TextView
+                android:id="@+id/tv_acercade_creador2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Samantha de la Cruz"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <TextView
+                android:id="@+id/tv_acercade_creador3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Sonia Jaguaco"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <TextView
+                android:id="@+id/tv_acercade_creador4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Cynthia Oyana"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
