--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:layout_width="388dp"
-        android:layout_height="217dp"
+        android:layout_height="255dp"
         android:layout_gravity="center"
         android:src="@drawable/portada" />
 
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:hint="Correo"
-        android:inputType="text"
+        android:inputType="text|textEmailAddress"
 
         />
 
@@ -36,7 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Entrar"
-
         />
 
     <TextView
