Actualización de la interfaz Acerca de  (Versión definitiva)1

--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -118,6 +118,15 @@
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="140dp"
                 tools:layout_editor_absoluteY="16dp" />
+            <TextView
+                android:id="@+id/tv_acercade_creador5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Conejito Bonito"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="16dp" />
         </LinearLayout>
 
     </LinearLayout>
